--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "npm run build:live",
+    "start": "ts-node src/index.ts",
     "build": "tsc -p .",
-    "build:live": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts"
+    "build:live": "nodemon --watch 'src/**/*.ts' --exec \\\"ts-node\\\" src/lib/lib.ts"
   },
   "keywords": [],
   "author": "",
@@ -24,8 +24,10 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@types/ansi-escapes": "^4.0.0",
     "@types/lodash": "^4.14.168",
     "@types/seedrandom": "^3.0.0",
+    "ansi-escapes": "^4.3.1",
     "lodash": "^4.17.21",
     "seedrandom": "^3.0.5"
   }
