--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@ node_modules/
 /coverage/
 /lib/
 NOTES.md
+__diff_output__
+/src/lib/__tests__/__files__/
+
+.DS_Store
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
