Use yarn workspaces.

--- a/package.json
+++ b/package.json
@@ -1,38 +1,15 @@
 {
   "name": "mazes-ts",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "jest",
-    "start": "ts-node src/index.ts",
-    "build": "tsc -p .",
-    "build:live": "nodemon --watch 'src/**/*.ts' --exec \\\"ts-node\\\" src/lib/lib.ts"
+    "start": "cd mazes-cli && yarn start:ts",
+    "build": "yarn workspaces run build"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/faker": "^5.1.7",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.35",
-    "faker": "^5.4.0",
-    "jest": "^26.6.3",
-    "nodemon": "^2.0.7",
-    "ts-jest": "^26.5.3",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
-  },
+  "workspaces": [
+    "mazes-lib",
+    "mazes-cli"
+  ],
   "dependencies": {
-    "@types/ansi-escapes": "^4.0.0",
-    "@types/jest-image-snapshot": "^4.3.0",
-    "@types/lodash": "^4.14.168",
-    "@types/pngjs": "^6.0.0",
-    "@types/seedrandom": "^3.0.0",
-    "ansi-escapes": "^4.3.1",
-    "jest-image-snapshot": "^4.4.0",
-    "lodash": "^4.17.21",
-    "pngjs": "^6.0.0",
-    "seedrandom": "^3.0.5"
+    "lerna": "^4.0.0"
   }
 }
