--- a/mazes-cli/package.json
+++ b/mazes-cli/package.json
@@ -8,7 +8,7 @@
     "test": "jest",
     "start:ts": "ts-node src/index.ts",
     "start": "node dist/index.js",
-    "clean": "rm -r dist",
+    "clean": "rm tsconfig.tsbuildinfo && rm -r dist",
     "build": "tsc",
     "build:live": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts"
   },
