--- a/mazes-lib/package.json
+++ b/mazes-lib/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "scripts": {
     "test": "jest",
-    "clean": "rm -r dist",
+    "clean": "rm tsconfig.tsbuildinfo; rm -r dist;",
     "build": "tsc",
     "build:live": "nodemon --watch 'src/**/*.ts' --exec \\\\\\\\\\\\\\\"ts-node\\\\\\\\\\\\\\\" src/index.ts"
   },
