--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,14 +8,19 @@ jobs:
       tag: '15.11.0'
     steps:
       - checkout
-      - node/install-packages
       - run:
           name: Check node version
           command: node --version
+      - node/install-npm:
+          version: '7.8.0'
       - run:
           name: Check npm version
           command: npm --version
-      - run: npm run test
+      - node/install-packages
+      - run:
+          name: Build code
+          command: npm run build -- --verbose
+      - run: npm run test -- --verbose
 workflows:
   test_my_app:
     jobs:
