--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,14 +5,14 @@ jobs:
   test:
     executor:
       name: node/default
-      tag: '15.11.0'
+      tag: '15.14.0'
     steps:
       - checkout
       - run:
           name: Check node version
           command: node --version
       - node/install-npm:
-          version: '7.8.0'
+          version: '7.13.0'
       - run:
           name: Check npm version
           command: npm --version
@@ -20,7 +20,14 @@ jobs:
       - run:
           name: Build code
           command: npm run build -- --verbose
-      - run: npm run test -- --verbose
+      - run:
+          name: Run tests
+          command: npm run test -- --verbose --ci --runInBand --reporters=default --reporters=jest-junit
+      - store_test_results:
+          path: ./reports/junit/
+      - store_artifacts:
+          path: ./reports/junit
+
 workflows:
   test_my_app:
     jobs:
