--- a/mazes-cli/package.json
+++ b/mazes-cli/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
     "jest": "^26.6.3",
+    "jest-junit": "^12.0.0",
     "nodemon": "^2.0.7",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
