--- a/mazes-lib/package.json
+++ b/mazes-lib/package.json
@@ -18,6 +18,7 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.35",
     "jest": "^26.6.3",
+    "jest-junit": "^12.0.0",
     "nodemon": "^2.0.7",
     "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1",
